# cpp

assignments/final/balashova/: CMakeLists.txt  README.md
assignments/final/balashova/src/: AiAgent.cpp  AiAgent.h  LanguageTeacher.cpp  main_language.cpp
assignments/final/kuranova/: CMakeLists.txt  README.md  config.json  prompt.json  text.json
assignments/final/kuranova/src/: AiAgent.cpp  AiAgent.h  main.cpp
